--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint": "^8.32.0",
     "prettier": "2.8.3",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
