--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
-  "compilerOptions": {
-    "declaration": true,
-    "declarationMap": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "sourceMap": true,
-    "strict": true,
-    "module": "CommonJS",
-    "target": "ES2020"
-  }
+	"compilerOptions": {
+		"declaration": true,
+		"declarationMap": true,
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true,
+		"module": "CommonJS",
+		"target": "ES2020",
+		"baseUrl": "./",
+		"paths": {
+			"@consts/*": ["consts/*"],
+			"@fixtures": ["support/fixtures"],
+			"@pages/*": ["pages/*"],
+			"@interfaces": ["support/interfaces"]
+		}
+	}
 }
